# rl-coding-agent

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  system_deps.sh
rl_agent/: __init__.py  config.py  generator.py  grpo.py  models.py  reward.py  rollout.py  train.py
rl_agent/languages/: __init__.py  base.py  cpp_exec.py  csharp_exec.py  go_exec.py  node_exec.py  python_exec.py  rust_exec.py
scripts/: check_runtimes.py  generate_problems.py  smoke_test.py  train.py
tests/: test_async_generator.py  test_executors.py  test_generator.py
