[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "rl-coding-agent"
version = "0.1.0"
description = "Infinite RL loop for training a SOTA coding agent"
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.setuptools.packages.find]
where = ["."]
include = ["rl_agent*"]
